# stack2nix

./: .gitignore  .travis.yaml  .travis.yml  ChangeLog.md  LICENSE  README.md  Vagrantfile  cabal2nix.nix  default.nix  nixpkgs-src.json  pkg_versions.txt  shell.nix  stack.yaml  stack2nix.cabal  stack2nix.nix  t
scripts/: check-nix-is-updated.sh  init-env.sh  travis.sh  vagrant.sh
src/: Stack2nix.hs
src/Stack2nix/: Render.hs  Repo.hs  Types.hs  Util.hs
stack2nix/: Main.hs
tests/: Tests.hs  test.hs
tests/gold/cardano-sl.git/: default.nix.golden
tests/gold/haskell-dummy-project1.git/: default.nix.golden  initialPackages.nix.golden
tests/gold/haskell-multi-package-demo1.git/: default.nix.golden
