name:                stack2nix
version:             0.2.3
synopsis:            Convert stack.yaml files into Nix build instructions.
description:         Convert stack.yaml files into Nix build instructions.
license:             MIT
license-file:        LICENSE
author:              IOHK DevOps
maintainer:          stack2nix@iohk.io
category:            Distribution, Nix
build-type:          Simple
extra-source-files:
  README.md
  ChangeLog.md
  pkg_versions.txt
cabal-version:       >= 1.10

source-repository head
  type:     git
  location: https://github.com/input-output-hk/stack2nix.git

library
  hs-source-dirs:      src
  build-depends:       base
                     , Cabal
                     , async >= 2.1.1.1 && < 2.3
                     , bytestring
                     , cabal2nix >= 2.10
                     , containers >= 0.5.7.1 && < 0.7
                     , directory >= 1.3 && < 1.4
                     , distribution-nixpkgs
                     , filepath >= 1.4.1.1 && < 1.5
                     , hackage-db
                     , optparse-applicative
                     , pretty
                     , path
                     , path-io
                     , language-nix
                     , lens
                     , process >= 1.4.3 && < 1.7
                     , regex-pcre
                     , SafeSemaphore >= 0.10.1 && < 0.11
                     , stack >= 1.9
                     , temporary >= 1.2.0.4 && < 1.4
                     , text >= 1.2.2.1 && < 1.3
                     , time
  exposed-modules:     Stack2nix
                     , Stack2nix.PP
                     , Stack2nix.Render
                     , Stack2nix.Types
                     , Stack2nix.Util
  other-modules:       Stack2nix.External.Cabal2nix
                     , Stack2nix.External.Stack
                     , Stack2nix.External.VCS.Git
                     , Stack2nix.External.Util
                     , Stack2nix.Hackage
                     , Paths_stack2nix
  ghc-options:         -Wall
  default-language:    Haskell2010

executable stack2nix
  main-is:             Main.hs
  build-depends:       base
                     , Cabal
                     , optparse-applicative
                     , split
                     , stack2nix
                     , time
  hs-source-dirs:      stack2nix
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    test.hs
  build-depends:
      base >= 4 && < 5
    , hspec
    , stack2nix
